--- a/Code/pom.xml
+++ b/Code/pom.xml
@@ -114,6 +114,23 @@
                         </configuration>
                     </execution>
 		    <execution>
+        <id>shade-preprocessing-jar</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>processdata</shadedClassifierName> <!-- Creates an uber JAR -->
+                            <transformers>
+                                <!-- Add the Main-Class to the manifest for CreateIndex JAR -->
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>ie.tcd.dalyc24.ProcessData</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+		    <execution>
 			    <id>shade-lucenesearch-jar</id>
                         <phase>package</phase>
                         <goals>
