--- a/A1-New/example1-create-index/pom.xml
+++ b/A1-New/example1-create-index/pom.xml
@@ -24,6 +24,16 @@
     <artifactId>lucene-backward-codecs</artifactId>
     <version>9.7.0</version> <!-- Ensure this matches your Lucene version -->
 </dependency>
+<dependency>
+    <groupId>org.apache.lucene</groupId>
+    <artifactId>lucene-analyzers-common</artifactId>
+    <version>9.7.0</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.lucene</groupId>
+    <artifactId>lucene-queries</artifactId>
+    <version>9.7.0</version>
+</dependency>
 	<dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
