--- a/Code/pom.xml
+++ b/Code/pom.xml
@@ -15,26 +15,12 @@
   
   <dependencies>
     <dependency>
-      <groupId>org.apache.lucene</groupId>
-      <artifactId>lucene-core</artifactId>
-      <version>8.6.3</version>
-    </dependency>
-    <dependency>
-    <groupId>org.json</groupId>
-    <artifactId>json</artifactId>
-    <version>20210307</version>
-</dependency>
-    <dependency>
             <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-queryparser</artifactId>
-            <version>7.5.0</version>
+            <artifactId>lucene-core</artifactId>
+            <version>9.5.0</version>
         </dependency>
-   <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-analyzers-common</artifactId>
-            <version>7.5.0</version>
-        </dependency> 
-    <dependency>
+        
+	<dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
@@ -62,10 +48,10 @@
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-	  <version>3.8.0</version>
+	  <version>3.8.1</version>
 	  <configuration>
-        	<source>1.7</source>
-        	<target>1.7</target>
+        	<source>11</source>
+        	<target>11</target>
     	</configuration>
         </plugin>
         <plugin>
@@ -102,56 +88,23 @@
 	<version>3.2.2</version>
 	<executions>
 		<execution>
-			<id>shade-createindex-jar</id>
+                        <id>shade-hnsw-jar</id>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
                         <configuration>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <shadedClassifierName>createindex</shadedClassifierName> <!-- Creates an uber JAR -->
+                            <shadedClassifierName>hnswexample</shadedClassifierName> <!-- Creates an uber JAR -->
                             <transformers>
                                 <!-- Add the Main-Class to the manifest for CreateIndex JAR -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ie.tcd.dalyc24.CreateIndex</mainClass>
+                                    <mainClass>ie.tcd.dalyc24.HNSWExample</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
                     </execution>
-		    <execution>
-        <id>shade-preprocessing-jar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <shadedClassifierName>processdata</shadedClassifierName> <!-- Creates an uber JAR -->
-                            <transformers>
-                                <!-- Add the Main-Class to the manifest for CreateIndex JAR -->
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ie.tcd.dalyc24.ProcessData</mainClass>
-                                </transformer>
-                            </transformers>
-                        </configuration>
-                    </execution>
-		    <execution>
-			    <id>shade-lucenesearch-jar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <shadedClassifierName>lucenesearch</shadedClassifierName> <!-- Creates an uber JAR -->
-                            <transformers>
-                                <!-- Add the Main-Class to the manifest for LuceneSearch JAR -->
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ie.tcd.dalyc24.LuceneSearch</mainClass>
-                                </transformer>
-                            </transformers>
-                        </configuration>
-                    </execution>
+                        
                 </executions>
       </plugin>
     </plugins>
